task-3ebf8a/environment/app/policies/07-debug-unrestricted.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "debug-unrestricted"
spec:
  endpointSelector:
    matchLabels:
      app: debug
  enableDefaultDeny:
    ingress: false
    egress: false
